# Copyright (c) Glyn Matthews 2021.
# Distributed under the Boost Software License, Version 1.0.
# (See accompanying file LICENSE_1_0.txt or copy at
# http://www.boost.org/LICENSE_1_0.txt)

add_subdirectory(containers)
add_subdirectory(network)
add_subdirectory(percent_encoding)
add_subdirectory(unicode)
add_subdirectory(domain)
add_subdirectory(core)
